# PothosVOLK

./: CMakeLists.txt  Changelog.txt  README.md
blockgen/: Blocks.yaml  Factory.mako.cpp  GenBlocks.py
source/: Accumulator.cpp  AddQuad.cpp  BlockFactories.cpp  Byteswap.cpp  Fallback.hpp  ModRange.cpp  Module.cpp  Normalize.cpp  PopCnt.cpp  PowerSpectralDensity.cpp  QuadMaxStar.cpp  SharedBufferAllocator.cpp  SharedBufferAllocator.hpp  SquareDist.cpp  SquareDistScalarMult.cpp  Utility.hpp  VOLKBlock.hpp
tests/: BlockTests.cpp  BlockTests.hpp  TestUtility.hpp
